--- a/index.html
+++ b/index.html
@@ -47,39 +47,37 @@
   <section class="title">
     <div class="overlay"></div>
     <div class="title-content">
-       <h1>Lorem, ipsum dolor.</h1>
-        <h1>Lorem, ipsum dolor.</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, rerum.</p>
-            <button class="btn"> <b>Order Now</b> </button>    
-    <div id="title-info" class="container">
+       <h1> <span style="margin-right: 30px;">Your</span>Favourite Food</h1>
+        <h1> <span style="margin-right: 40px;">Delivered</span>Hot & Fresh</h1>
+          <p>HEALTHY SWITCHER chefs do all the prep work, like peeling, chopping & marinating, so you can cook a fresh homemade dinner in just 15 minutes..</p>
+           <a><button class="btn"> Order Now </button></a> 
       <div class="title-info">
         <div class="title-info-content">
           <i class="fa fa-clock-o" aria-hidden="true"></i>
-          <h6>Lorem ipsum dolor sit.</h6>
-          <p>loreasd  erejrls</p>
+          <h6>Today 10:00 am - 7:00 pm</h6>
+          <p>Working hours</p>
         </div>
         <div class="title-info-content">
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
-          <h6>Lorem ipsum dolor sit.</h6>
-          <p>loreasd  erejrls</p>
+            <i class="fa fa-location-arrow" aria-hidden="true"></i>
+          <h6>Velyka Vasylkivska 100</h6>
+          <p>Get Directions</p>
         </div>
         <div class="title-info-content">
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
-          <h6>Lorem ipsum dolor sit.</h6>
-          <p>loreasd  erejrls</p>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+          <h6>+38 (063)833 24 15</h6>
+          <p>Call Online</p>
         </div>
       </div>
    </div>         
   </section>
+
 
   <section class="work"> 
       <div class="small-title">
             <h2><b>W0RK</b> </h2>
             <hr>
               <h3>How It Works</h3>
-      </div> 
-      <!-- <div class="blank"> -->
-        <!-- <div class="container"> -->
+      </div>
           <div class="wrapper">
             <div class="work-blank">
                 <h4>Lorem, ipsum.</h4>
@@ -91,7 +89,7 @@
                 <div class="work-lines"></div>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
           </div>
-          <div class="work-blank">
+          <div class="work-blank ">
             <h4>Lorem, ipsum.</h4>
               <div class="work-lines"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
@@ -102,10 +100,10 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
       </div>
           </div>
-      <!-- </div>     -->
+  
   </section>
 
-  <section class="dishes">
+  <section class="dishes" id="dishes">
     <div class="small-title">
       <h2><b>DISHES</b> </h2>
       <hr>
@@ -146,8 +144,8 @@
      <i class="fa fa-star" aria-hidden="true"></i>
      <i class="fa fa-star-half-o" aria-hidden="true"></i>
      <i class="fa fa-star-o" aria-hidden="true"></i>
-       <span style="color: aliceblue; margin-left: 15px;">12</span>
-         <button class="btn" id="btn">ORDER</button>
+       <span style="color: aliceblue; margin-left: 15px; font-weight: bold;">12</span>
+         <button class="btn"><span>ORDER</span></button>
        </div>
    </div>
 </div>
@@ -164,8 +162,8 @@
    <i class="fa fa-star" aria-hidden="true"></i>
    <i class="fa fa-star-half-o" aria-hidden="true"></i>
    <i class="fa fa-star-o" aria-hidden="true"></i>
-     <span style="color: aliceblue; margin-left: 15px;">12</span>
-       <button class="btn">ORDER</button>
+     <span style="color: aliceblue; margin-left: 15px; font-weight: bold;">12</span>
+       <button class="btn" id="btn2" onclick="makeOrder()"><span class="dto-btn-span2">ORDER</span></button>
      </div>
  </div>
 </div>
@@ -182,8 +180,8 @@
    <i class="fa fa-star" aria-hidden="true"></i>
    <i class="fa fa-star-half-o" aria-hidden="true"></i>
    <i class="fa fa-star-o" aria-hidden="true"></i>
-     <span style="color: aliceblue; margin-left: 15px;">12</span>
-       <button class="btn">ORDER</button>
+     <span style="color: aliceblue; margin-left: 15px; font-weight: bold;">12</span>
+       <button class="btn" id="btn4" onclick="makeOrder()"><span class="dto-btn-span3">ORDER</span></button>
      </div>
  </div>
 </div>
@@ -200,8 +198,8 @@
     <i class="fa fa-star" aria-hidden="true"></i>
     <i class="fa fa-star-half-o" aria-hidden="true"></i>
     <i class="fa fa-star-o" aria-hidden="true"></i>
-     <span style="color: aliceblue; margin-left: 15px;">12</span>
-       <button class="btn">ORDER</button>
+     <span style="color: aliceblue; margin-left: 15px; font-weight: bold;">12</span>
+       <button class="btn" id="btn5" onclick="makeOrder()"><span class="dto-btn-span4">ORDER</span></button>
      </div>
  </div>
 </div>
@@ -218,8 +216,8 @@
     <i class="fa fa-star" aria-hidden="true"></i>
     <i class="fa fa-star-half-o" aria-hidden="true"></i>
     <i class="fa fa-star-o" aria-hidden="true"></i>
-     <span style="color: aliceblue; margin-left: 15px;">12</span>
-       <button class="btn">ORDER</button>
+     <span style="color: aliceblue; margin-left: 15px; font-weight: bold;">12</span>
+       <button class="btn"  id="btn" onclick="makeOrder()"><span class="dto-btn-span5">ORDER</span></button>
      </div>
  </div>
 </div>
