--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"> <i class="fa fa-bars" aria-hidden="true"></i></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -131,25 +131,25 @@
               <h3>How It Works</h3>
       </div>
           <div class="wrapper">
-            <div class="work-blank" onmouseenter="hover(this)" onmouseleave="noHover(this)">
-                <h4 class="hovernone">Lorem, ipsum.</h4>
-                  <div class="work-lines hovernone"></div>
-                    <p class="hovernone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
+            <div class="work-blank">
+                <h4 class="hover">Pick meals</h4>
+                  <div class="work-lines"></div>
+                    <p class="hover">Choose your meals from our diverse weekly menu. Find gluten or dairy free, low carb & veggie options.</p>
             </div>
             <div class="work-blank">
-              <h4 class="hovernone">Lorem, ipsum.</h4>
-                <div class="work-lines hovernone"></div>
-                  <p class="hovernone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
+              <h4 class="hover">Choose how often</h4>
+                <div class="work-lines"></div>
+                  <p class="hover">Our team of chefs do the prep work - no more chopping, measuring, or sink full of dishes!</p>
           </div>
           <div class="work-blank">
-            <h4 class="hovernone">Lorem, ipsum.</h4>
-              <div class="work-lines hovernone"></div>
-                <p class="hovernone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
+            <h4 class="hover">Fast deliveries</h4>
+              <div class="work-lines"></div>
+                <p class="hover">Your freshly prepped 15-min dinner kits arrive on your doorstep in a refrigerated box.</p>
         </div>
-        <div class="work-blank" >
-          <h4 class="hovernone">Lorem, ipsum.</h4>
-            <div class="work-lines hovernone"></div>
-              <p class="hovernone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, magnam.</p>
+        <div class="work-blank">
+          <h4 class="hover">Tasty meals</h4>
+            <div class="work-lines"></div>
+              <p class="hover">Gobble makes cooking fast, so you have more time to unwind and be with family.</p>
       </div>
           </div>
   
@@ -352,37 +352,49 @@
               <div class="small-wrapper">
                 <div class="small-recipes-blank srb-1">
                   <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</h4>
+                  <div class="recipes-stats">
+                    <div class="left-side">
                     <p>LUNCH</p>
                       <span>07 Jan 2016</span>
-                    <div class="blank-lower">
+                    </div>  
+                    <div class="right-side">
                         <i class="fas fa-eye"></i>
                       <span>275</span>
                         <i class="fa fa-comments" aria-hidden="true"></i>
                       <span>12</span>
                     </div>
                 </div>
-                <div class="small-recipes-blank srb-2">
-                  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</h4>
-                    <p>LUNCH</p>
-                      <span>07 Jan 2016</span>
-                    <div class="blank-lower">
-                        <i class="fas fa-eye"></i>
-                      <span>275</span>
-                        <i class="fa fa-comments" aria-hidden="true"></i>
-                      <span>12</span>
-                    </div>
+              </div>
+              <div class="small-recipes-blank srb-2">
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</h4>
+                <div class="recipes-stats">
+                  <div class="left-side">
+                  <p>DINNER</p>
+                    <span>07 Jan 2016</span>
+                  </div>  
+                  <div class="right-side">
+                      <i class="fas fa-eye"></i>
+                    <span>275</span>
+                      <i class="fa fa-comments" aria-hidden="true"></i>
+                    <span>12</span>
+                  </div>
+              </div>
+            </div>
+            <div class="small-recipes-blank srb-3">
+              <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</h4>
+              <div class="recipes-stats">
+                <div class="left-side">
+                <p>SWEETS</p>
+                  <span>07 Jan 2016</span>
+                </div>  
+                <div class="right-side">
+                    <i class="fas fa-eye"></i>
+                  <span>275</span>
+                    <i class="fa fa-comments" aria-hidden="true"></i>
+                  <span>12</span>
                 </div>
-                <div class="small-recipes-blank srb-3">
-                  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</h4>
-                    <p>LUNCH</p>
-                      <span>07 Jan 2016</span>
-                    <div class="blank-lower">
-                        <i class="fas fa-eye"></i>
-                      <span>275</span>
-                        <i class="fa fa-comments" aria-hidden="true"></i>
-                      <span>12</span>
-                    </div>
-                </div>
+            </div>
+          </div>
               </div>
             </div>
           </div>
@@ -396,7 +408,7 @@
   </div> 
   <div class="container">
     <div class="social-wrapper">
-      <div class="social-blank">
+      <div class="social-blank inst-blnk">
           <div class="social-blnk-upper">
             <i class="fa fa-twitter" aria-hidden="true"></i>
             <span>Twitter</span>
@@ -415,7 +427,7 @@
             <span style="color:#34C759">@DennisFerguson</span>
           </div>
       </div>
-      <div class="social-blank">
+      <div class="social-blank twitter-blnk">
         <div class="social-blnk-upper">
           <i class="fa fa-instagram" aria-hidden="true"></i>
           <span>Instagram</span>
@@ -424,12 +436,16 @@
           </a>
         </div>
         <div class="social-blnk-lower inst-lower">
-          <img src="./img/inst-1.png" alt="" class="bigger">
-          <img src="./img/inst-2.png" alt="">
-          <img src="./img/inst-3.png" alt="">
-          <img src="./img/inst-4.png" alt="" class="bigger" style="border-radius: 0 0 0 6px;">
-          <img src="./img/inst-5.png" alt="">
-          <img src="./img/inst-6.png" alt="" style="border-radius: 0 0 6px  0;">
+          <div class="img-social">
+            <img src="./img/inst-1.png" alt="" class="bigger">
+            <img src="./img/inst-2.png" alt="">
+            <img src="./img/inst-3.png" alt="">
+          </div>
+          <div class="img-social">
+            <img src="./img/inst-4.png" alt="" class="bigger" style="border-radius: 0 0 0 10px; height: 119px;">
+            <img src="./img/inst-5.png" alt="">
+            <img src="./img/inst-6.png" alt="" style="border-radius: 0 0 10px 0;">
+          </div>
         </div>
     </div>
     <div class="social-blank facebook-blnk">
