--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>HealthyFood</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg">
-    <div class="container">
+    <div class="container navbar-cont">
       <a class="navbar-brand" href="#">
         <div class="logo-content">
           <div class="logo">
@@ -34,32 +34,61 @@
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"> <i class="fa fa-bars" aria-hidden="true"></i></span>
+        <span class="navbar-toggler-icon"> 
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="#dishes">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="#recipes">Recipes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Chefs</a>
+            <a class="nav-link" href="#chefs">Chefs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="nav-link" href="#social">Contacts</a>
           </li>
+          <ul class="navbar-nav  second-ul">
+            <li class="nav-link">
+              <a href=""><button class="btn">Login</button></a>
+            </li>
+            <li class="nav-link">
+              <a href="#">
+                <button onclick="ShowForm()" class="signIn btn" >Sign In</button>
+              </a>
+            </li>
+          </ul>
         </ul>
       </div>
+
     </div>
   </nav>
-
-
-
-
-  <div class="line"></div>
+  <div class="regist">
+    <form class="form_signIn" name="signIn" method="GET">
+      <legend>Registration Form
+        <label for="fname">First Name:</label>
+        <input type="text" id="fname" name="fname" required=""><br>
+        <label for="lname">Last Name:</label>
+        <input type="text" id="lname" name="lname">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Необязательно">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"required=""><br>
+          <div class="gender">
+            <input type="checkbox" id="male" name="gender" style="margin-left: 0;">
+            <label for="male">Male</label><br>
+            <input type="checkbox" id="female" name="gender" >
+            <label for="female">Female</label>
+          </div>
+        <input type="submit" name="Register" class="register">
+      </legend>
+    </form>
+  </div>
 
   <section class="title">
     <div class="title-content">
@@ -117,11 +146,11 @@
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="prev-icon" aria-hidden="true"><i class="fa fa-arrow-left" aria-hidden="true"></i></span>
         <span class="sr-only">Previous</span>
       </a>
       <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="next-icon" aria-hidden="true"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
@@ -277,7 +306,7 @@
     </div>
   </section>
 
-  <section class="chefs">
+  <section class="chefs" id="chefs">
     <div class="small-title">
       <h2><b>CHEFS</b></h2>
       <hr>
@@ -329,7 +358,7 @@
     </div>
   </section>
 
-  <section class="recipes">
+  <section class="recipes" id="recipes">
     <div class="small-title">
       <h2><b>RECIPES</b></h2>
       <hr>
@@ -400,7 +429,7 @@
     </div>
   </section>
 
-  <section class="social">
+  <section class="social" id="social">
     <div class="small-title">
       <h2><b>S0CIAL</b></h2>
       <hr>
