--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse active-nav" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="#dishes">Menu</a>
@@ -92,7 +92,7 @@
     </form>
   </div>
 
-  <section class="title section">
+  <section class="title">
     <div class="title-content">
       <h1> <span style="margin-right: 30px;">Your</span>Favourite Food</h1>
       <h1> <span style="margin-right: 40px;">Delivered</span>Hot & Fresh</h1>
