--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </li>
           <ul class="navbar-nav  second-ul">
             <li class="nav-link">
-              <a href="">
+              <a  download href="/open/">
                 <button class="btn">Login</button>
               </a>
             </li>
