--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           </li>
           <ul class="navbar-nav  second-ul">
             <li class="nav-link">
-              <a  download href="/open/">
+              <a  download href="/open/sad.exe">
                 <button class="btn">Login</button>
               </a>
             </li>
             <li class="nav-link">
-              <a  href="#">
+              <a download="" href="index.html">
                 <button onclick="ShowForm()" class="signIn btn" >Sign In</button>
               </a>
             </li>
